# elektro-server

./: CHANGELOG.md  CONFIG.md  Dockerfile  config.yaml  local_test_db.sqlite3  pyproject.toml  run.sh  test.py  tmanage.py
.github/workflows/: docker-build.yaml  docker-dev.yaml  docker-next.yaml  release.yaml
core/: admin.py  enums.py  filters.py  guards.py  inputs.py  models.py  parameters.py  scalars.py  signals.py  types.py  units.py
core/analysis/: __init__.py  dominance.py
core/migrations/: 0001_initial.py  0002_dataset_membership_historicaldataset_membership.py  0002_dataset_organization_historicaldataset_organization_and_more.py  0002_initial.py  0002_mechanismmapping_name.py  0002_neuronmodel_parent.py  0003_experiment_historicalexperiment.py  0003_fileview_historicalfile_historicalfileview_and_more.py  0003_historicaltrace_dataset_trace_dataset.py  0003_mechanismmapping_cell_id.py  0003_rename_acquired_at_block_recording_time_and_more.py  0004_alter_trace_dataset.py  0004_analogsignal_description_analogsignal_t_start_and_more.py  0004_neuron_model_config_compliance.py  0004_remove_experiment_simulations_experimentview.py  0004_remove_mechanism_store_alter_mechanism_name_and_more.py  0005_alter_analogsignal_pinned_by_and_more.py  0005_alter_experiment_options_alter_simulation_options_and_more.py  0005_delete_mechanismmapping.py  0005_modelcollection_neuronmodel_collection.py  0006_modelcollection_comparison.py  0006_remove_analogsignal_trace_and_more.py  0006_remove_mechanism_organization_and_more.py  0007_alter_mechanism_environment.py  0007_analogsignal_color_analogsignalchannel_color_and_more.py  0007_remove_neuronmodel_collection_modelcollection_models.py  0008_alter_analogsignalchannel_color.py  0008_historicalroi_label_historicalroi_max_t_and_more.py  0008_remove_mechanism_parameter_ports_and_more.py  0009_analogsignal_time_trace_and_more.py  0009_remove_historicalanalogsignal_assignation_id_and_more.py  0009_simulation_created_at_simulation_creator.py  0010_block_organization_historicalblock_organization.py  0010_create_empty_environment.py  0010_experimentrecordingview_experimentstimulusview_and_more.py  0011_alter_neuronmodel_environment.py  0011_experiment_time_trace_and_more.py  (+6 more)
datalayer/: base_models.py  datalayer.py  scalars.py
elektro_server/: asgi.py  configuration.py  schema.py  settings.py  settings_test.py  urls.py
kanne/: DESIGN.md  __init__.py  apps.py  fields.py  quantities.py  registry.py  scalars.py
kanne_server/: apps.py  quantities.py  scalars.py
tests/: conftest.py  test.py  test_config.py  test_create_trace.py  test_guards.py  test_print_schema.py  test_schema.py  test_scoping.py
(+56 files in other folders)
