[project]
name = "elektro-server"
version = "0.1.0"
description = ""
authors = [{ name = "jhnnsrs", email = "jhnnsrs@gmail.com" }]
requires-python = ">=3.12,<4"
readme = "README.md"
dependencies = [
    "django>=6",
    "omegaconf>=2.3.0,<3",
    "psycopg[binary]>=3.2",
    "daphne>=4.0.0,<5",
    "channels-redis>=4.1.0,<5",
    "django-choices-field>=3",
    "authentikate>=2.0.1",
    "ujson>=5.8.0,<6",
    "jsonpatch~=1.33",
    "django-probes>=1.7.0,<2",
    "rich>=14.0.0",
    "koherent>=1.0.0",
    "django-redis>=5.4.0",
    "boto3>=1.38.9",
    "aiohttp>=3.11.18",
    "semver>=3.0.4",
    "duckdb>=1.2.2",
    "django-taggit>=6.1.0",
    "django-health-check>=3.20.0",
    "django-polymorphic>=4.1.0",
    "kante>=1.1.0",
    "uvicorn>=0.46.0",
    "opentelemetry-instrumentation-django>=0.62b1",
    "opentelemetry-instrumentation-asgi>=0.62b1",
    "opentelemetry-sdk>=1.41.1",
    "opentelemetry-exporter-otlp>=1.41.1",
    "strawberry-graphql[opentelemetry]>=0.312.0",
    "opentelemetry-instrumentation-dbapi>=0.62b1",
    "opentelemetry-instrumentation-psycopg>=0.62b1",
    "pint>=0.25.3",
]

[dependency-groups]
dev = [
    "django-stubs>=5.2.0",
    "dokker>=2.5",
    "moto>=5.1.11",
    "mypy>=1.15.0",
    "numpy>=2.4.6",
    "obstore>=0.10.1",
    "pytest-asyncio>=1.1.0",
    "pytest-django>=4.11.1",
    "zarr>=3",
]

[tool.django-stubs]
django_settings_module = "elektro_server.settings"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "elektro_server.settings_test"


[tool.ruff]
# Enable the pycodestyle (`E`) and Pyflakes (`F`) rules by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
extend-select = ["ANN", "D1"]
extend-ignore = [ "ANN002", "ANN003", "D100", "ANN401"]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "tests",
    "examples",
    "**/migrations",
]

# Same as Black.
line-length = 300


# Assume Python 3.12.
target-version = "py312"


[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
upload_to_pypi = true
branch = "main"
build_command = "uv build"



[tool.mypy]
exclude = ["venv/", "tests/", "examples/"]
plugins = ["mypy_django_plugin.main","pydantic.mypy"]
ignore_missing_imports = true
strict = true
